# India-Energy-Data

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: launch.json  settings.local.json
api/: pyproject.toml
api/gridapi/: main.py
api/gridapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: plant_overrides.json  plant_review_top30.md
db/migrations/: 001_init.sql  002_quality.sql  003_plants.sql  004_schema_hashes.sql  005_psp.sql  006_shares_view.sql  007_cea_backtest.sql  008_blend_view.sql  009_ci_backtest.sql
deploy/: Dockerfile  README.md  bootstrap.sh  docker-compose.prod.yml
docs/: METHODOLOGY.md
docs/sources/: CEA_RE_100626.xlsx  NPP_dgr2_100626.xls  README.md  cea_nic_in.html  grid-india_in.html  merit_currentstatus_MHA.json  merit_piechart_MHA.json  (+11 more)
scrapers/: pyproject.toml
scrapers/gridscrapers/: backtest.py  cea.py  ci_backtest.py  db.py  drift.py  emission_factors.json  estimation.py  fuelmix.py  http.py  plants.py  psp.py  quality.py  run.py  schema.py  solar.py  tick.py  vision.py  zones.py
scrapers/gridscrapers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scrapers/gridscrapers/sources/: __init__.py  chhattisgarh_sldc.py  delhi_sldc.py  karnataka_sldc.py  maha_vision.py  merit.py  punjab_sldc.py  vidyut_pravah.py
scrapers/tests/: test_cea.py  test_chhattisgarh_sldc.py  test_ci_backtest.py  test_drift.py  test_estimation.py  test_merit.py  test_psp.py  test_punjab_sldc.py  test_vidyut_pravah.py  test_vision.py
scripts/: probe_rldc.py  tick.sh
web/: package-lock.json  package.json
(+15 files in other folders)
