[project]
name = "gridapi"
version = "0.1.0"
description = "Read-only API for India live grid data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gridapi*"]
