[project]
name = "gridscrapers"
version = "0.1.0"
description = "Scrapers for India live grid data (demand, generation mix, prices)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.7",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gridscrapers*"]
